--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div id="header">
       <img src="assets/img/daytrippr_logo.svg" height="80px "alt="" />
-      <h1 data-type="page-title" contenteditable="true" id="page-title"></h1>
+      <h1 data-type="page-title" contenteditable="true" id="page-title">The Age of the Jaguar</h1>
     </div>
 
     <section id="content">
